--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,53 +1,131 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>{% if page.title %} {{ page.title }} {% else %} {{ site.name }} {% endif %}</title>
-        <meta name="viewport" content="width=device-width">
-
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+	<title>{% if page.title %} {{ page.title }} {% else %} {{ site.name }} {% endif %}</title>
+        <meta name="generator" content="Jekyll" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet"> 
+        <!--[if lt IE 9]>
+          <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="/assets/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
 
     </head>
     <body>
 
-		<div id="container">
+    <div class="wrapper">
+	    <div class="box">
+		    <div class="row">
+			    <!-- sidebar -->
+			    <div class="column col-sm-3" id="sidebar">
+				    <a class="logo" href="/">D</a>
+				    <ul class="nav">
+					    <hr>
+					    {% for p in site.pages %}
+					    {% if p.title %}
+					    <li class="page"><a href="{{ p.url }}">{{ p.title }}</a></li>
+					    {% endif %}
+					    {% endfor %}
 
-			<div class="left">
-				<h1>{{ site.name }}</h1>
-				<img id="about" src="/img/logo.jpg" height="75px" width="75px" /><br />	
+					    <hr>
+					    {% for i in site.urls %}
+					    <li class="active"><a href="{{ i.url }}">{{ i.text }}</a></li>
+					    {% endfor %}
+				    </ul>
+				    {% comment %}
+				    <ul class="nav hidden-xs" id="sidebar-footer">
+					    <li>
+					    &copy; {{ site.name }}
+					    </li>
+				    </ul>
+				    {% endcomment %}
+			    </div>
+			    <!-- /sidebar -->
 
-				<strong>navigation</strong><br />
-				<a href="/">home</a> <br />
-				{% for i in site.urls %}
-					<a class="about" href="{{ i.url }}">{{ i.text }}</a><br />
-				{% endfor %}
-				
-				{% if site.about %}
-				<div id="about">
-					<strong>about</strong><br />
-					{{ site.about }}
-				</div>
-				{% endif %}
-			</div>
+			    <!-- main -->
+			    <div class="column col-sm-9" id="main">
+				    <div class="padding">
+					    <div class="full col-sm-9">
 
-			<div class="right">
-				
-				{{ content }}
-				
-				<footer>
-					&copy; {{ site.name }}
-					{% if site.github %} 
-						- <a href="{{ site.github }}">{{ site.github }}</a>
-					{% endif %}
-				</footer>
-			</div>
-		
-		</div>
+						    <!-- content -->
 
+						    <div class="col-sm-12" id="featured">   
+							    <div class="page-header text-muted">
+								    {{ site.name }}
+							    </div> 
+						    </div>
+						    
+						    {{ content }}
+
+						    {% comment %}
+						    <div class="col-sm-12">
+							    <div class="page-header text-muted divider">
+								    Up Next
+							    </div>
+						    </div>
+						    <div class="row">    
+							    <div class="col-sm-4 text-center">
+								    <h4>Related 1</h4>
+								    <a href="#"><img src="//placehold.it/100" class="img-circle"></a>
+							    </div>
+							    <div class="col-sm-4 text-center">
+								    <h4>Related 2</h4>
+								    <a href="#"><img src="//placehold.it/100" class="img-circle"></a>
+							    </div>
+							    <div class="col-sm-4 text-center">
+								    <h4>Related 3</h4>
+								    <a href="#"><img src="//placehold.it/100" class="img-circle"></a>
+							    </div>
+						    </div>
+						    <div class="col-sm-12">
+							    <div class="page-header text-muted divider">
+								    Connect with Us
+							    </div>
+						    </div>
+
+						    <div class="row">
+							    <div class="col-sm-6">
+								    <a href="#">Twitter</a> <small class="text-muted">|</small> <a href="#">Facebook</a> <small class="text-muted">|</small> <a href="#">Google+</a>
+							    </div>
+						    </div>
+						    {% endcomment %}
+
+						    <hr>
+
+						    <div class="row" id="footer">    
+							    <div class="col-sm-6">
+
+							    </div>
+							    <div class="col-sm-6">
+								    <p>
+								    <a href="#" class="pull-right">&copy; {{ site.name }}</a>
+								    </p>
+							    </div>
+						    </div>
+
+						    <hr>
+
+
+					    </div><!-- /col-9 -->
+				    </div><!-- /padding -->
+			    </div>
+			    <!-- /main -->
+
+		    </div>
+	    </div>
+    </div>
+
+
+	<script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+	<script type='text/javascript'>
+		$(document).ready(function() {
+		});
+	</script>
     </body>
 </html>
